2008-06-30  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Enhanced menu.
	* Preferences/ServerListView.cs: Refactored view-controlling code into own
	  methods.
	* Preferences/PreferencesDialog.cs: Expose CurrentPage property.
	* Chats/ProtocolChatView.cs: Only show a warning when closing the protocol
	  chats, if open chats exists.
	* Chats/ChatView.cs: Refactored activity / highlight code handling.
	* GnomeUI.cs: Clear highlight after having synced all messages, as it's less
	  confusing when a frontend reconnects to a running smuxi server.
	* gtk-gui/Smuxi.Frontend.Gnome.QuickConnectDialog.cs, QuickConnectDialog.cs:
	  Implemented QuickConnectDialog.
	
	* gtk-gui/Smuxi.Frontend.Gnome.ConnectDialog.cs, ConnectDialog.cs:
	  Implemented ConnectDialog.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Chats/ProtocolChatView.cs: Implemented closing of protocol chats.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Fixed whitespace.
	* Chats/ProtocolChatView.cs, Chats/SessionChatView.cs,
	  Chats/PersonChatView.cs, Chats/GroupChatView.cs, Chats/ChatView.cs:
	  Refactored tab menu code.
	
	  Moved tab popup menu to ChatView.
	
	  Implemented closing tabs using the middle-mouse button.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp, Chats/ProtocolChatView.cs, Chats/NetworkChatView.cs:
	  Renamed NetworkChatView to ProtocolChatView.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31
	* Frontend-GNOME.mdp: Reference GTK# 2.8 / GNOME# 2.8.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Don't prevent ctrl+a/left/right/backspace key shortcuts.

2008-03-04  Mirco Bauer <meebey@meebey.net> 

	* Preferences/ServerView.cs: Added defaults for ICQ/AIM/MSNP.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Chats/SessionChatView.cs, Entry.cs: Implemented SessionChat*, abusing
	  NetworkChat* as smuxi chat was a dirty hack.
