@@ -35,11 +35,27 @@ namespace Smuxi.Frontend.Gnome
     [ChatViewInfo(ChatType = ChatType.Protocol)]
     public class ProtocolChatView : ChatView
     {
+        private Gtk.Image   _TabImage;
+        
         public ProtocolChatView(ChatModel chat) : base(chat)
         {
             Trace.Call(chat);
             
+            _TabImage = new Gtk.Image(
+                new Gdk.Pixbuf(
+                    null,
+                    "protocol-chat.svg",
+                    16,
+                    16
+                )
+            );
+            
+            TabHBox.PackStart(_TabImage, false, false, 2);
+            TabHBox.ShowAll();
+            
             Add(OutputScrolledWindow);
+            
+            ShowAll();
         }
         
         protected override void Close()
