@@ -64,6 +64,10 @@
     <File name="gtk-gui/Smuxi.Frontend.Gnome.QuickConnectDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="ConnectDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/Smuxi.Frontend.Gnome.ConnectDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="../../images/group-chat.svg" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="../../images/person-chat.svg" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="../../images/protocol-chat.svg" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="../../images/session-chat.svg" subtype="Code" buildaction="EmbedAsResource" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Engine" />
