@@ -1,3 +1,9 @@
+2008-07-07  Mirco Bauer <meebey@meebey.net> 
+
+	* Frontend-GNOME.mdp, Chats/ProtocolChatView.cs, Chats/SessionChatView.cs,
+	  Chats/PersonChatView.cs, Chats/GroupChatView.cs, Chats/ChatView.cs,
+	  ChatViewManager.cs: Implemented tab images.
+
 2008-06-30  Mirco Bauer <meebey@meebey.net> 
 
 	* MainWindow.cs: Enhanced menu.
